* 2014-08-27 - ioannis.chouklis@open-xchange.com

 - Fix for bug 34133: Removed XING relevant properties from the crawler.properties as well as the definition of the crawler itself (xing.yml) 

* 2014-08-27 - martin.herfurth@open-xchange.com

 - Fix for bug 33158: Changed date/time label in notification mails.

* 2014-08-27 - tobias.friedrich@open-xchange.com

 - Fix for bug 32994: Map "Job Title" to field "position" for import of Outlook-style .csv-files
 - Fix for bug 33931: Adjust the "created by" and "modified by" properties of contacts in shared folders to the ID of the context 
                      administrator in case the user who created those contacts is deleted.

* 2014-08-26 - thorben.betten@open-xchange.com

 - Fix for bug 33535: Respect info store quota when "publish attachment on exceeded quota" is enabled

* 2014-08-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 34147: Supply OneCharSequence with proper toString() implementation
 - Fix for bug 32635: Introduced designated "autocomplete" action for looking up contacts

* 2014-08-25 - marc.arens@open-xchange.com

 - Fix for bug 33952: Implement GroupDispatcher#dispose to completely reinitialize itself in case of severe errors

* 2014-08-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 33748: Don't attempt to read more bytes from the buffer than available

* 2014-08-25 - thorben.betten@open-xchange.com

 - Fix for bug 34070: Fixed parsing of E-Mail address in case personal is mail-safe encoded
 - Fix for bug 33966: Apply string normalization only to non-ascii characters

* 2014-08-24 - thorben.betten@open-xchange.com

 - Fix for bug 33979: Restored libraries in c.o.subscribe.crawler bundle to maintain package compatibility

* 2014-08-20 - martin.herfurth@open-xchange.com

 - Fix for bug 33821: Avoid duplicate entries for participant tables.

* 2014-08-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 34075: Don't take over the UID from the original contact when creating a copy
