@@ -1,3 +1,7 @@
+* 2014-08-28 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 34183: Make infostore driver available once "com.openexchange.infostore" is the only account for the user
+
 * 2014-08-27 - ioannis.chouklis@open-xchange.com
 
  - Fix for bug 34133: Removed XING relevant properties from the crawler.properties as well as the definition of the crawler itself (xing.yml) 
